--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "adminhq",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "./dist/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "postinstall": "tsc"
   },
   "repository": {
     "type": "git",
@@ -19,7 +20,11 @@
   "homepage": "https://github.com/itsAnanth/adminhq#readme",
   "dependencies": {
     "@types/node": "*",
+    "express": "^4.17.3",
     "ts-node": "^10.7.0",
     "typescript": "^4.6.3"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.13"
   }
 }
