--- a/package.json
+++ b/package.json
@@ -19,12 +19,10 @@
   },
   "homepage": "https://github.com/itsAnanth/adminhq#readme",
   "dependencies": {
+    "@types/express": "^4.17.13",
     "@types/node": "*",
     "express": "^4.17.3",
     "ts-node": "^10.7.0",
     "typescript": "^4.6.3"
-  },
-  "devDependencies": {
-    "@types/express": "^4.17.13"
   }
 }
