--- a/package.json
+++ b/package.json
@@ -22,7 +22,11 @@
     "@types/express": "^4.17.13",
     "@types/node": "*",
     "express": "^4.17.3",
+    "msgpack-lite": "^0.1.26",
     "ts-node": "^10.7.0",
     "typescript": "^4.6.3"
+  },
+  "devDependencies": {
+    "@types/msgpack-lite": "^0.1.8"
   }
 }
