--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "adminhq",
-  "version": "1.0.4",
+  "version": "1.0.6",
   "description": "",
   "main": "./dist/index.js",
   "scripts": {
@@ -26,6 +26,9 @@
     "ts-node": "^10.7.0",
     "typescript": "^4.6.3"
   },
+  "files": [
+    "**/dist/"
+  ],
   "devDependencies": {
     "@types/msgpack-lite": "^0.1.8"
   }
